Added unittest and logging